--- a/src/app/pages/broker-auth/components/auth-broker-id-form/auth-broker-id-form.component.html
+++ b/src/app/pages/broker-auth/components/auth-broker-id-form/auth-broker-id-form.component.html
@@ -1,27 +1,27 @@
 <form
   [formGroup]="registrationForm"
   (ngSubmit)="onSubmit()"
-  class="auth-form-by-id"
+  class="auth-formId"
   idRegistration
 >
-  <fieldset class="auth-form-item">
-    <label for="email" class="auth-form-item__label">Название дилера*</label>
+  <fieldset class="auth-formId-item">
+    <label for="email" class="auth-formId-item__label">Название дилера*</label>
     <input
       type="text"
-      class="auth-form-item__name"
+      class="auth-formId-item__name"
       placeholder="Введите название"
       name="name"
       formControlName="name"
     />
   </fieldset>
 
-  <fieldset class="auth-form-item">
-    <div class="auth-form-item__wrapper">
-      <label for="id" class="auth-form-item__label">ID-дилера*</label>
+  <fieldset class="auth-formId-item">
+    <div class="auth-formId-item__wrapper">
+      <label for="id" class="auth-formId-item__label">ID-дилера*</label>
       <img
         src="../../../../../assets/images/tooltip_item.svg"
         alt="tool-tip"
-        [matTooltipClass]="{'tool-tip': true}"
+        [matTooltipClass]="{ 'tool-tip': true }"
         class="example-tab-icon"
         matTooltip="tooltip"
         #tool="matTooltip"
@@ -31,28 +31,29 @@
     </div>
     <input
       type="password"
-      class="auth-form-item__id"
+      class="auth-formId-item__id"
       placeholder="Введите номер ID"
       name="id"
       formControlName="id"
     />
   </fieldset>
 
-  <fieldset class="auth-form-checkbox">
+  <fieldset class="auth-formId-checkbox">
     <input
       [checked]="checkboxSucces"
       (change)="checkboxSucces = !checkboxSucces"
       type="checkbox"
-      class="auth-form-checkbox__success"
+      class="auth-formId-checkbox__success"
       name="checkbox"
     />
-    <label for="checkbox" class="auth-form-checkbox__label"
+    <label for="checkbox" class="auth-formId-checkbox__label"
       >Я принимаю условия соглашения и даю
-      <u><b>Согласие на обработку персональных данных</b></u></label>
+      <u><b>Согласие на обработку персональных данных</b></u></label
+    >
   </fieldset>
 
   <button
-    class="auth-form-button"
+    class="auth-formId-button"
     type="submit"
     [disabled]="
       (isSubmitting$ | async) || !checkboxSucces || !this.registrationForm.valid
