--- a/src/app/pages/main-form-content/sub-pages/processing-page/components/work/work.component.html
+++ b/src/app/pages/main-form-content/sub-pages/processing-page/components/work/work.component.html
@@ -106,7 +106,12 @@
         /></label>
       </fieldset>
 
-      <fieldset class="form-group__item">
+      <app-counter-button
+        [initialState]="currentFields"
+        (currentCountValue)="addItem($event)"
+      ></app-counter-button>
+
+      <!-- <fieldset class="form-group__item">
         <label class="form-group__item--label">
           Ежемесячный доход, ₽
           <input
@@ -115,7 +120,7 @@
             class="form-group__item--input"
           />
         </label>
-      </fieldset>
+      </fieldset> -->
     </div>
   </div>
 
