--- a/src/app/pages/main-form-content/sub-pages/processing-page/components/work/work.component.html
+++ b/src/app/pages/main-form-content/sub-pages/processing-page/components/work/work.component.html
@@ -106,11 +106,14 @@
         /></label>
       </fieldset>
 
-      <app-counter-button
-        [initialState]="currentFields"
-        (currentCountValue)="addItem($event)"
-      ></app-counter-button>
-
+      <fieldset class="form-group__item">
+        <label class="form-group__item--label">
+          Ежемесячный доход, ₽
+          <app-counter-button
+            (currentCountValue)="addItem($event)"
+          ></app-counter-button>
+        </label>
+      </fieldset>
       <!-- <fieldset class="form-group__item">
         <label class="form-group__item--label">
           Ежемесячный доход, ₽
