create input slider componet

--- a/src/app/pages/main-form-content/sub-pages/processing-page/components/user-info/user-info.component.html
+++ b/src/app/pages/main-form-content/sub-pages/processing-page/components/user-info/user-info.component.html
@@ -214,16 +214,16 @@
         </fieldset>
       </div>
     </div>
+
+    <button
+      class="next-page__button"
+      mat-button
+      [disabled]="!userInfoForm.valid"
+      (click)="submitRegistrationForm(userInfoForm)"
+    >
+      Продолжить
+    </button>
   </form>
 
-  <button
-    class="next-page__button"
-    mat-button
-    [disabled]="!userInfoForm.valid"
-    (click)="submitRegistrationForm(userInfoForm)"
-  >
-    Продолжить
-  </button>
-
-  <button (click)="openInsuranceModal()">Open modal</button>
+  <!-- <button (click)="openInsuranceModal()">Open modal</button> -->
 </div>
