--- a/src/app/pages/main-form-content/sub-pages/processing-page/components/user-info/user-info.component.scss
+++ b/src/app/pages/main-form-content/sub-pages/processing-page/components/user-info/user-info.component.scss
@@ -133,10 +133,11 @@
   }
 
   .next-page__button {
+    align-self: flex-end;
+    margin-top: 70px;
     font-weight: 500;
     font-size: 20px;
     line-height: 24px;
-    text-align: center;
     background: #343e48;
     padding: 14px 76px;
     border-radius: 6px;
