--- a/src/app/pages/user-auth/components/register/register.component.scss
+++ b/src/app/pages/user-auth/components/register/register.component.scss
@@ -1,6 +1,6 @@
 .auth-page {
   width: 100vw;
-  background-image: url("../assets/image/autn_client_background.png");
+  background-image: url('/assets/image/autn_client_background.png');
   //background: radial-gradient(
   //  106.64% 106.64% at 50% 50%,
   //  #515e6b 0%,
