--- a/src/app/pages/main-form-content/main-form-content-page.component.scss
+++ b/src/app/pages/main-form-content/main-form-content-page.component.scss
@@ -14,7 +14,7 @@
   left: 0;
   right: 0;
   z-index: -1;
-  background-image: url('../../../assets/images/main-page__background.svg');
+  background-image: url('/assets/images/main-page__background.svg');
   filter: blur(3px);
   -webkit-filter: blur(3px);
   height: 100vh;
