create aplication form component

--- a/src/app/pages/main-form-content/sub-pages/processing-page/components/summary/summary.component.html
+++ b/src/app/pages/main-form-content/sub-pages/processing-page/components/summary/summary.component.html
@@ -1,1 +1,4 @@
-<p>summary works!</p>
+<div class="summary container">
+  <div class="loan"></div>
+  <app-application-form></app-application-form>
+</div>
