--- a/src/app/shared/components/side-bar/side-bar.component.html
+++ b/src/app/shared/components/side-bar/side-bar.component.html
@@ -1,5 +1,15 @@
 <div class="side-bar">
-  <app-progress-bar></app-progress-bar>
+  <div class="progress-bar__container">
+    <div class="progress-bat-title">Заполнено {{ value }}%</div>
+    <mat-progress-bar
+      class="mat-progress-bar-item"
+      [color]="color"
+      [mode]="mode"
+      [value]="value"
+      [bufferValue]="bufferValue"
+    >
+    </mat-progress-bar>
+  </div>
 
   <mat-vertical-stepper #stepper (selectionChange)="selectionChanged($event)">
     <mat-step
