fix arch of shared side bar

--- a/src/app/pages/main-form-content/sub-pages/processing-page/components/user-info/user-info.component.html
+++ b/src/app/pages/main-form-content/sub-pages/processing-page/components/user-info/user-info.component.html
@@ -225,5 +225,5 @@
     </button>
   </form>
 
-  <!-- <button (click)="openInsuranceModal()">Open modal</button> -->
+  <button (click)="openInsuranceModal()">Open modal</button>
 </div>
