--- a/src/app/pages/main-form-content/componets/side-bar/side-bar.component.scss
+++ b/src/app/pages/main-form-content/componets/side-bar/side-bar.component.scss
@@ -1,10 +1,10 @@
 .side-bar {
   max-width: 292px;
-  height: 100%;
-  height: 395px;
+  max-height: 395px;
   background: #ffffff;
   box-shadow: -1px 3px 20px 1px rgba(33, 44, 55, 0.08);
   border-radius: 20px;
+  padding: 0 0 20px 0;
 }
 
 ::ng-deep {
