--- a/src/app/pages/main-form-content/sub-pages/calculation-loan-page/components/owner/owner.component.scss
+++ b/src/app/pages/main-form-content/sub-pages/calculation-loan-page/components/owner/owner.component.scss
@@ -15,8 +15,6 @@
     margin-bottom: 35px;
     width: 100%;
     height: 3vh;
-    font-size: 30px;
-    line-height: 130%;
     color: #343e48;
     font-family: 'Gilroy';
     font-style: normal;
@@ -26,7 +24,7 @@
   }
 
 .owner-form {
-    height: 100%;
+      height: 100%;
       display: flex;
       flex-direction: column;
       align-items: flex-start;
@@ -40,7 +38,7 @@
 .owner-products-container {
     display: flex;
     flex-direction: column;
-    justify-content:space-around ;
+    gap: 35px;
     width: 100%;
     height: 30vh;
     border-bottom: 2px solid #F3F3F3;
@@ -116,3 +114,106 @@
         background: url(../../../../../../../assets/images/previous_osago_bg.png) center;
     }
   }
+
+  .owner-personal-information-container {
+    width: 100%;
+    height: 70vh;
+
+    .personal-information-title {
+        margin-top: 35px;
+
+        margin-bottom: 35px;
+        width: 100%;
+        height: 3vh;
+        color: #343e48;
+        font-family: 'Gilroy';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 30px;
+        line-height: 130%;  
+    }
+  }
+  .owner-personal-information {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+  }
+
+  .gender {
+    display: flex;
+    flex-direction: column;
+
+    &__title {
+        font-style: normal;
+        font-weight: 400;
+        font-size: 22px;
+        line-height: 130%;
+        color: #343e48;
+      }
+
+    &__list {
+      display: flex;
+      flex-wrap: nowrap;
+      gap: 10px;
+      max-width: 70%;
+
+      &--button {
+        padding: 10px 40px;
+        background: #f2f4f7;
+        color: #343e48;
+        border-radius: 20px;
+      }
+    }
+  }
+  .active {
+    background: #72879e !important;
+    color: #ffffff !important;
+  }
+
+  .owner-personal-information__item {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    width: 17vw;
+
+    &_registration {
+        width: 35vw;
+      }
+
+    &--label {
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 24px;
+      color: #343e48;
+    }
+
+    &--select,
+    &--input {
+      margin-top: 10px;
+      width: 100%;
+      background: #f2f4f7;
+      border-radius: 8px;
+      padding: 17.5px 10px;
+    }
+    &--options {
+      margin-top: 24px;
+      display: flex;
+      align-items: center;
+      flex-direction: row;
+
+      .checkbox {
+        width: 20px;
+        height: 20px;
+        margin-right: 10px;
+        accent-color: #72879e;
+
+        .owner-personal-information--label {
+          font-weight: 400;
+          font-size: 16px;
+          line-height: 24px;
+          color: #343e48;
+        }
+      }
+    }
+  }
+  
