create summery page with custom loan page components

--- a/src/app/shared/components/application-form/application-form.component.html
+++ b/src/app/shared/components/application-form/application-form.component.html
@@ -6,20 +6,7 @@
     </header>
     <div class="form-body">
       <span class="form-body__title">Кредит</span>
-      <div class="loan-papams">
-        <div class="loan-params__item">
-          <span class="loan-params__item-label">Сумма кредита </span>
-          <span class="loan-params__item-value">2 365 654 р</span>
-        </div>
-        <div class="loan-params__item">
-          <span class="loan-params__item-label">Первый взнос </span>
-          <span class="loan-params__item-value">365 654 р</span>
-        </div>
-        <div class="loan-params__item">
-          <span class="loan-params__item-label">Срок кредита</span>
-          <span class="loan-params__item-value">10 лет</span>
-        </div>
-      </div>
+      <app-loan-params></app-loan-params>
     </div>
     <footer class="form-footer">
       <span class="form-footer__title">Страховые продукты</span>
