fix types and interfaces

--- a/src/app/shared/components/insurance-policies-modal/components/insurance-polices-modal-card/insurance-polices-modal-card.component.html
+++ b/src/app/shared/components/insurance-policies-modal/components/insurance-polices-modal-card/insurance-polices-modal-card.component.html
@@ -33,7 +33,7 @@
     <div
       class="card-content__options"
       *ngIf="card.options"
-      (click)="sendIsHidenValues(hideOptions.isHiden)"
+      (click)="sendIsHidenValues()"
     >
       Настроить опции
     </div>
