--- a/src/app/pages/main-form-content/sub-pages/processing-page/components/user-info/user-info.component.html
+++ b/src/app/pages/main-form-content/sub-pages/processing-page/components/user-info/user-info.component.html
@@ -208,7 +208,7 @@
               type="number"
               min="1"
               step="any"
-              formControlName="loan_repayment"
+              formControlName=" loan_repaymentuserForm"
               class="form-group__item--input"
           /></label>
         </fieldset>
